# aodn-portal-v2

./: .dockerignore  .env  .env.config.dev  .env.config.edge  .env.config.prod  .env.config.staging  .env.config.test  .env.edge  .env.sample  .env.staging  .eslintrc.cjs  .gitignore  Dockerfile  README.md  commitlint.config.cjs  docker-compose.yml  eslint.config.cjs  generateEnv.sh  index.html  package-lock.json  package.json  playwright.config.ts  sample.env  tsconfig.json  vite.config.ts  yarn.lock.old
playwright/: .dockerignore  .env.debug  .gitignore  .pre-commit-config.yaml  Dockerfile.test  Dockerfile.web  README.md  config.py  conftest.py  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  ruff.toml  settings.toml
playwright/core/constants/: devices.py  search_filters.py
playwright/core/dataclasses/: device_config.py  search_filter.py
playwright/core/enums/: data_settings_filter.py  layer_type.py  search_sort_type.py  search_view_layouts.py
playwright/core/factories/: device_configs.py  layer.py  search_filter_validator_factory.py
playwright/core/types/: devices.py
playwright/mocks/: api_router.py  apply.py  routes.py
playwright/mocks/api/: autocomplete.py  categories.py  collection_detail.py  collections.py  download_dialog.py  download_wfs.py  geowebcache.py  (+7 more)
playwright/pages/: base_page.py  detail_page.py  landing_page.py  search_page.py
playwright/scripts/: entrypoint.sh  run-playwright-tests.sh  wait-for-server.sh
playwright/tests/: conftest.py
playwright/utils/: json_utils.py  map_utils.py  trace_utils.py  url_utils.py
(+1185 files in other folders)
