[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.5"
pytest-playwright = "^0.7.0"
playwright = "^1.51.0"
pytest-xdist = "^3.5.0"
python-dotenv = "^1.0.1"
dynaconf = "^3.2.4"
pytest-html = "^4.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"
pytest-repeat = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
